login signup frontend

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-DATABASE_URL="mongodb://localhost:27017/cumminsHackathon"
-# 
+DATABASE_URL="mongodb+srv://chaman:ychaman@cluster0.sj69asz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
