--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
-DATABASE_URL="mongodb+srv://chaman:ychaman@cluster0.sj69asz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DATABASE_URL="mongodb://localhost:27017/cumminsHackathon"
 JWT_SECRET="lkasjdksjfaslkdjfa"
+CLOUD_NAME=domheydkx
+API_KEY=982942654326651
+API_SECRET=bVF8ubWOZiAGW5MfxexR3-p_di4
