--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
 
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
 
     "socket.io": "^4.7.5"
 
